some cleaning & fixes

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
-
-system_base_timezone: UTC
+system_base_location: 'undefined location'
+#system_base_timezone: 'Europe/Zurich'
+system_base_timezone: 'Etc/UTC'
 system_base_rsyslog_server: no
