--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -12,42 +12,20 @@
   apt: pkg=apt-transport-https state=present force=yes
   tags: util
 
-# locales & timezone
 - name: install locales
   apt: pkg=locales state=present
-
-- name: ensure UTF-8 locale
-  locale_gen: name=en_US.UTF-8 state=present
-  tags: util
-
-- name: Locale - check current locale settings
-  command: /usr/bin/locale
-  register: locale_output
-  changed_when: locale_output.stderr != ''
-
-- name: Locale - generate UTF-8 locale
-  command: /usr/sbin/locale-gen en_US.UTF-8
-  when: locale_output.stderr != ''
-
-- name: Locale - adjust current locale
-  command: /usr/sbin/update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
-  when: locale_output.stderr != ''
-
-- name: Update Timezone
-  copy: content="{{ system_base_timezone }}\n" dest=/etc/timezone owner=root group=root mode=0644
-  become: true
-  register: timezone
-
-- name: Reconfigure Timezone Data
-  shell: dpkg-reconfigure -f noninteractive tzdata
-  become: true
-  when: timezone.changed
 
 - name: install htop
   apt: pkg=htop state=present
 
 - name: install sudo
   apt: pkg=sudo state=present
+
+- name: install curl
+  apt: pkg=curl state=present
+
+- name: install rsync
+  apt: pkg=rsync state=present
 
 - name: install screen
   apt: pkg=screen state=present
@@ -65,6 +43,9 @@
   apt: pkg=ca-certificates state=present
 
 # python
+- name: install python-setuptools
+  apt: pkg=python-setuptools state=present
+
 - name: install pip
   easy_install: name=pip
 
