--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -4,9 +4,6 @@
   apt: update_cache=yes cache_valid_time=3600
   tags: tools
 
-- name: install aptitude
-  apt: pkg=aptitude state=present
-
 - name: upgrade packages
   apt: upgrade=safe
   tags: util
@@ -33,9 +30,6 @@
 - name: install screen
   apt: pkg=screen state=present
 
-- name: install ntp
-  apt: pkg=ntp state=present
-
 - name: install git
   apt: pkg=git state=present
 
@@ -50,11 +44,41 @@
 - name: install python-setuptools
   apt: pkg=python-setuptools state=present
 
-- name: install pip
+- name: install pip (easy_install)
   easy_install: name=pip
+  when: ansible_distribution == 'Debian' and ansible_distribution_version == '9'
 
-- name: install virtualenv
+- name: install virtualenv (easy_install)
   easy_install: name=virtualenv
+  when: ansible_distribution == 'Debian' and ansible_distribution_version == '9'
+
+- name: install virtualenv (easy_install)
+  easy_install: name=virtualenv
+  when: ansible_distribution == 'Debian' and ansible_distribution_version == '9'
+
+- name: install pip3 (apt)
+  apt: pkg=python3-pip state=present
+  when: ansible_distribution == 'Debian' and ansible_distribution_version|int >= 10
+
+- name: install pip (apt)
+  apt: pkg=python-pip state=present
+  when: ansible_distribution == 'Debian' and ansible_distribution_version|int >= 10
+
+# packages only needed/wanted on "hardware"
+# TODO: also include other virtualisation types
+- name: install 'hardware' host packages
+  apt: pkg="{{ item }}" state=present
+  with_items:
+     - ntp
+     - lm-sensors
+  when: ansible_virtualization_role == "host"
+
+- name: uninstall/don't install 'hardware' host packages
+  apt: pkg="{{ item }}" state=absent
+  with_items:
+     - ntp
+     - lm-sensors
+  when: ansible_virtualization_role == "guest"
 
 
 
